fixed overflow issue

--- a/src/styles/components/Review.module.scss
+++ b/src/styles/components/Review.module.scss
@@ -31,6 +31,10 @@
       }
     }
 
+    p {
+      overflow-wrap: break-word;
+    }
+
     .flagButton {
       outline: none;
       border: none;
